--- a/.eslintrc
+++ b/.eslintrc
@@ -5,13 +5,16 @@
     "browser": true
   },
   "parserOptions": {
-    "ecmaVersion": 2015
+    "ecmaVersion": 2015,
+    "sourceType": "script"
   },
+  "parser": "@typescript-eslint/parser",
   "extends": [
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
     "eslint:recommended",
-    "standard"
+    "standard",
+    "plugin:@typescript-eslint/recommended"
   ],
   "settings": {
     "react": {
@@ -83,7 +86,9 @@
         "react/jsx-indent": [
           "error",
           2,
-          { "checkAttributes": true }
+          {
+            "checkAttributes": true
+          }
         ],
         "react/self-closing-comp": [
           "error",
@@ -105,7 +110,8 @@
         "**/*.html"
       ],
       "plugins": [
-        "eslint-plugin-html"
+        "eslint-plugin-html",
+        "@typescript-eslint"
       ]
     }
   ]
