--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "stylelint-config-recommended": "^9.0.0",
     "stylelint-config-standard": "^27.0.0",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "typeScript": "npm:typescript@^4.9.5"
   }
 }
