--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "typeScript": "npm:typescript@^4.9.5"
   }
 }
